@startuml ai_full

package ai {
    class Node {
    - Node parent
    - int col
    - int row
    - int gCost
    - int hCost
    - int fCost
    - boolean solid
    - boolean open
    - boolean checked

    + Node(int, int)
  }

  class PathFinder {
    - GamePanel gp
    - Node[][] node
    - ArrayList<Node> openList
    - ArrayList<Node> pathList
    - Node startNode
    - Node goalNode
    - Node currentNode
    - boolean goalReached
    - int step
    + PathFinder(GamePanel)
    + instantiateNodes()
    + resetNodes()
    + setNodes(int, int, int, int, Entity)
    + getCost(Node)
    + search(): boolean
    + openNode(Node)
    + trackThePath()
  }
}

PathFinder -- Node : Aggregates
PathFinder -- GamePanel : Aggregates

@enduml
